@@ -41,10 +41,10 @@ bartMachine = function(X = NULL, y = NULL, Xy = NULL,
 	    run_in_sample,
 	    s_sq_y,
 	    #print_tree_illustrations = FALSE
-	    cov_prior_vec = NULL,
+	    cov_prior_vec,
 	    use_missing_data,
 	    covariates_to_permute, 
-	    num_rand_samps_in_library , 
+	    num_rand_samps_in_library, 
 	    use_missing_data_dummies_as_covars,
 	    replace_missing_data_with_x_j_bar,
 	    impute_missingness_with_rf_impute,
